--- a/awesomeStyle.css
+++ b/awesomeStyle.css
@@ -1,19 +1,26 @@
 @import "ubuntuFont.css";
 
 body{
-    z-index: -1;
     font-family: "ubunturegular";
+    scroll-behavior: smooth;
+    
 }
+
+/*label{
+    padding-bottom: 0.5em;
+}*/
 
 .fila{
     align-content: center;
     text-align: center;
     vertical-align: auto;
     margin: auto;
-    width: 70%;
-    padding:15px;
+    width: 85%;
+    padding:1em;
     /*border: 3px solid green;*/
     clear: both;
+    user-zoom: fixed;
+    flex-wrap: nowrap;
 }
 
 .nome_fila{
@@ -25,8 +32,17 @@ body{
 }
 
 .poltrona{
+    display: inline;       
+}
+
+.poltronaIMG{
     display: inline;
-    
+    width: 4.5em;        
+}
+
+.poltronaIMG:hover{
+    shape-image-threshold: 0.5;
+    width: 5em;
 }
 
 .sedie_sx{    
@@ -35,68 +51,129 @@ body{
 
 .sedie_dx{ 
     float: right;
-    padding-top: 25%;
+    padding-top: 22.5em;
+}
+
+.sedie_dx img{
+    display: block; 
+    /*width: 38%;
+    height: 38%;*/
+    
+}
+
+.sedie_sx img{
+    /*padding-left: 5%;*/
+    display: block; 
+     
 }
 
 .infoSedile{
-    z-index: 100;
     position: relative;
     /*transform: translateX();*/
     border: 2px solid rgba(5, 182, 5, 0.473);
     border-radius: 10%;
     max-width: fit-content;
     margin: auto;
-    transition: cubic-bezier(0.455, 0.03, 0.515, 0.955);/*wtf is this??*/
     text-align: center;
     vertical-align: auto;
 }
 
-.closeButton{
-    /*float: right;
-    clear: both;*/
-    background-color: red;
-    color: white;
-    border-color: black;
-    border-radius: 100%;
-    text-align: center;
-    left: 0px;
-    width: fit-content;
+.close {
+    color: #aaaaaa;
+    float: right;
+    font-size: 28px;
+    font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+    color: #000;
+    text-decoration: none;
+    cursor: pointer;
+}
+
+.invia {
+    color: #aaaaaa;
+    margin:auto;
+    font-size: 28px;
+    font-weight: bold;
+    border: 1px solid #aaaaaa;
+    border-radius: 0.2em;
+    background-color: white;
+}
+
+.invia:hover,
+.invia:focus {
+    color: rgb(10, 10, 10);
+    border: 1px solid rgb(10, 10, 10);
+    text-decoration: none;
+    cursor: pointer;
 }
 
 /*.infoSedileContenuto{
     float:left;
 }*/
-.sedie_sx > .poltrona img{
-    padding-left: 5%;
-    display: block; 
-    width: 38%;
-    height: 38%;   
+.inviaInModal{
+    margin: auto;
+    width: 20em;
 }
 
-
-.sedie_dx > .poltrona img{
-    display: block; 
-    width: 38%;
-    height: 38%;
-    
+.infoOccupato{
+    z-index: 1;
+    margin: auto;
+    font-family: "ubuntubold";
+    text-align: center;
+    padding-top: 0.5em;
+    font-size: 1em;
+    border: 2px solid rgba(255, 0, 0, 0.158);
+    height: 2em;
+    border-radius: 3em;
+    background-color: rgba(240, 248, 255, 0.699);
 }
-
 
 .hidden-div-loading-resources{
     display: none;
     padding: 1px;
 }
 
+.modal{
+  display: none; /* Hidden by default */
+  position: fixed; /* Stay in place */
+  z-index: 1; /* Sit on top */
+  padding-top: 100px; /* Location of the box */
+  left: 0;
+  top: 0;
+  width: 100%; /* Full width */
+  height: 100%; /* Full height */
+  overflow: auto; /* Enable scroll if needed */
+  background-color: rgb(0,0,0); /* Fallback color */
+  background-color: rgba(0,0,0,0.5); /* Black w/ opacity */
+}
 
+#palco{
+    
+    border: 2px solid rgb(90, 22, 22);
+    height: 2em;
+    width: 15em;
+    text-align: center;
+    font-family: "ubuntubold";
+    font-size: 3em;
+    margin: auto;
+    line-height: 2em;
+    border-radius: 0.2em;     
+}
 
-
-#data_serata{
+#data-serata{
     background-color: rgba(187, 206, 16, 0.445);
     margin: auto;
     text-align: center;
 }
 
-#fila6{
+#fila01, #fila03, #fila05, #fila07, #fila09, #fila11{
+    padding-left: 5em;
+}
+
+#fila06{
     padding-bottom: 7%;
 }
 
@@ -120,18 +197,19 @@ body{
     position: fixed;
     bottom: 1%;
     right: 1%;
-    z-index: 50;
-    width: fit-content;
+    /*z-index: 50;*/
+    width: 15em;
     height: fit-content;
-    border-radius: 15px; 
+    border-radius: 3em; 
     border-color: black;
+    font-size: 2em;
     background-color: rgba(0, 0, 255, 0.705); 
+    font-family: "ubuntumedium";
     color: white; 
 
 }
 
 #alertDiv-nuovaPrenotazione{
-    z-index: 1000;
     text-align: center;
     vertical-align: auto;
     position: fixed;
@@ -151,14 +229,26 @@ body{
     position: fixed;
     bottom: 1%;
     right: 1%;
-    z-index: 50;
-    width: fit-content;
-    height: fit-content;
+    /*z-index: 50;*/
+    width: 16em;
+    /*height: fit-content+2px;*/
     border-radius: 15px; 
     border-color: black;
     background-color: rgba(255, 0, 0, 0.705); 
     color: white; 
-
 }
 
+#modal-content{
+    background-color: #fefefe;
+    margin: auto;
+    padding: 20px;
+    border: 1px solid #888;
+    width: 80%;
+    border-radius: 0.5em; 
+}
+
+#server-comm{
+    font-family: "ubuntubold";
+    margin: auto;
+}
 
